--- a/Game1rock-paper-scissors/index.html
+++ b/Game1rock-paper-scissors/index.html
@@ -7,6 +7,15 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+<h2>Computer Choice<span id="computer-choice"></span></h2>
+<h2>Your Choice<span id="user-choice"></span></h2>
+<h2>Result<span id="result"></span></h2>
+
+<button>Rock</button>
+<button>Paper</button>
+<button>Scissors</button>
+
     <script src="app.js"></script>
 </body>
 </html>
